# ocr-pipeline

./: .gitignore  Dockerfile.detection  Dockerfile.pipeline  Dockerfile.recognition  Makefile  README.md  docker-compose.yml  load_test.py  pyproject.toml  requirements.txt  run.sh  timer.py
common/: logger.py  setup.py
common/schema/: __init__.py  base.py  detection.py  recognition.py
configs/: config.yml
detection/: README.md  app.py  pyproject.toml
message_queue/: __init__.py  base.py  bucket.py  factory.py  monitor.py  requirements.txt
message_queue/message_process/: base.py  check_batch_size.py  hybrid.py  wait_for_time.py
message_queue/rabbitmq/: queue.py
message_queue/redis/: queue.py
message_queue/tasks/: __init__.py  tasks.py
monitoring/: __init__.py  monitoring.py
pipeline/: Dockerfile  app.py  file_utils.py  pipeline_utils.py  processors.py  producer.py  pyproject.toml  requirements.txt
recognition/: README.md  app.py  consumer.py  model.py  pyproject.toml  recognition_model.py
std-detection/: Dockerfile  api.py  craft_utils.py  detection_utils.py  file_utils.py  imgproc.py  refinenet.py  requirements.txt  test.py
str-recognition/: Dockerfile  api.py  model.py  processor.py  requirements.txt  utils.py
str-recognition/modules/: __init__.py  feature_extraction.py  prediction.py  sequence_modeling.py  transformation.py
streamlit/: Dockerfile  app.py  requirements.txt
tests/: conftest.py  docker-compose.test.yml  requirements.txt  test_queue.py
