[tool.poetry]
name = "std"
version = "0.1.0"
description = ""
authors = ["eunsung"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
requests = "^2.32.3"
uvicorn = "^0.34.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
